<resources>
    <string name="app_name">My Application</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="choose_password">Password</string>
    <string name="repeat">Confirm Password</string>
    <string name="AutoFillHint" />
    <string name="cancel">Cancel</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="logout">Logout</string>
    <string name="forgotPassword">Forgot  Password</string>
    <string name="defaultImageTag">Defualt Image</string>
    <string name="newImageTag">New Image</string>
    <string name="menu_chatrooms">Chatrooms</string>
    <string name="menu_users">Users</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_myprofile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatroomname">Enter Chat Room Name</string>
    <string name="createButton">Create</string>
    <string name="ViewUsers">View Users</string>
    <string name="EnterMessage">Enter Message</string>
    <string name="sendMessage">Send</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="genderLabel">"Gender: "</string>
    <string name="emailLabel">Email:</string>
    <string name="cityLabel">City:</string>
    <string name="editProfileLabel">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="chatRoomNewButton">Create New Chat Room</string>
</resources>